k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devbook-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: devbook
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
